@@ -9,6 +9,9 @@ python-apt (0.7.7.2) UNRELEASED; urgency=low
     - do not change working dir in debExtractArchive() (LP: #184093)
   * apt/cache.py:
     - support "in" in apt.Cache() (LP: #251587)
+  * python/progress.cc:
+    - when pulse() does not return a boolean assume "true"
+      (thanks to Martin Pitt for telling me about the problem)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 10:24:30 +0200
 
